Blog page with quite a few changes..

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -10,7 +10,7 @@
 <nav style="align-content: center" class="navbar navbar-inverse">
     <a href="/posts">Home</a>
     <a href="/posts/create">Make a Post</a>
-    <a href="/login">Login</a>
+    <a href="/posts/login">Login</a>
 </nav>
 
 <h1>Create a Post</h1>
