--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -5,19 +5,52 @@
     <title>Blog</title>
     <link rel="stylesheet" href="../../css/maincss.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-
 </head>
 <body>
 
-<nav style="align-content: center" class="navbar navbar-inverse">
-    <a href="/posts">Home</a>
-    <a href="/posts/create">Make a Post</a>
-    <a href="/posts/login">Login</a>
-</nav>
+    <nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 
 <h1>Welcome to The Blog</h1>
 
-<div id="posts"></div>
+<div id="posts" th:each="post:${post}">
+
+    <h3>th:text="${post.title}</h3>
+    <p>th:text="${post.body}</p>
+
+
+</div>
+
+<div class="container">
+
+    <table class="table">
+
+        <tr class="active">
+
+            <th>Post ID</th>
+
+            <th>Title</th>
+
+            <th>Content</th>
+
+            <th></th>
+
+        </tr>
+
+        <tr th:each="post : ${posts}" th:object="${post}">
+
+            <td th:text="*{id}"></td>
+
+            <td><a th:href="@{'/posts/' + *{id}}" th:text="*{title}"></a></td>
+
+            <td th:text="*{body}"></td>
+
+            <td><a th:href="@{'/posts/' + *{id} + '/edit'}">Edit</a></td>
+
+        </tr>
+
+    </table>
+
+</div>
 
 </body>
 </html>
