Blog page -fixed navbar to use partial

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -7,11 +7,7 @@
 </head>
 <body>
 
-<nav style="align-content: center" class="navbar navbar-inverse">
-    <a href="/posts">Home</a>
-    <a href="/posts/create">Make a Post</a>
-    <a href="/posts/login">Login</a>
-</nav>
+<nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 
 <h1>Create a Post</h1>
 
