--- a/src/main/resources/templates/posts/login.html
+++ b/src/main/resources/templates/posts/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/maincss.css"/>
 </head>
 <body>
-<nav th:replace="partials :: navbar" />
+<nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 
 <div class="container">
     <div class="row">
