--- a/src/main/resources/static/css/maincss.css
+++ b/src/main/resources/static/css/maincss.css
@@ -6,6 +6,7 @@ body{
 .navbar{
     display: flex;
     justify-content: center space-around;
+    padding-top: 2%;
     font-size: 1.2em;
     color:whitesmoke;
 }
@@ -30,4 +31,8 @@ h1{
 
 #posts{
     background-color: yellow;
+}
+
+.view-post{
+    padding-left: 45%;
 }
