--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -39,9 +39,9 @@
 
             <td th:text="*{id}"></td>
 
-            <td><a th:href="@{'/posts/' + *{id}}" th:text="*{title}"></a></td>
+            <td><a th:href="@{'/posts/view/' + *{id}}" th:text="*{title}"></a></td>
 
-            <td th:text="*{body}"></td>
+            <!--<td th:text="*{body}"></td>-->
 
             <td><a th:href="@{'/posts/' + *{id} + '/edit'}">Edit</a></td>
 
