--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -39,7 +39,7 @@
 
             <td th:text="*{id}"></td>
 
-            <td><a th:href="@{'/posts/view/' + *{id}}" th:text="*{title}"></a></td>
+            <td><a th:href="@{'/posts/' + *{id}}" th:text="*{title}"></a></td>
 
             <!--<td th:text="*{body}"></td>-->
 
