--- a/src/main/resources/templates/posts/view.html
+++ b/src/main/resources/templates/posts/view.html
@@ -18,7 +18,7 @@
     <p th:text="*{body}"></p>
     </div>
 
-    <button type="submit" class="btn btn-info"><a th:href="@{'/posts/edit' + *{id} + '/edit'}">Edit</a></button>
+    <a th:href="@{'/posts/' + *{id} + '/edit'}" class="btn btn-info" type="submit">Edit</a>
     </div>
 
 </body>
