--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -18,6 +18,7 @@
         </div>
 
         <button type="submit" class="btn btn-info">Edit</button>
+        <a th:href="@{'/posts/' + *{id} + '/delete'}" class="btn btn-danger" type="submit">Delete</a>
     </form>
 
 </div>
