--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -7,9 +7,9 @@
 
 <nav th:fragment="awesomeNav" class="navbar navbar-inverse">
 
-        <a href="/posts">Home</a>
-        <a href="/posts/create">Make a Post</a>
-        <a href="/posts.login">Login</a>
+        <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a>
+        <a href="/posts/create"><span class="glyphicon glyphicon-penicl"></span>Make a Post</a>
+        <a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Login</a>
 </nav>
 
 </body>
