--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Edit</title></head>
 <body>
-    <nav th:include="partials/awesomeNav :: awesomeNav"></nav>
+    <nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 
 <h1 th:text="*{title}">Edit </h1>
 
