--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<nav th:fragment="awesomeNav" class="navbar navbar-inverse">
+<nav th:fragment="awesomeNav" class="navbar navbar-default">
 
         <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a>
-        <a href="/posts/create"><span class="glyphicon glyphicon-penicl"></span>Make a Post</a>
+        <a href="/posts/create"><span class="glyphicon pencil"></span>Make A Post</a>
         <a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Login</a>
 </nav>
 
