--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -8,7 +8,7 @@
 
 <nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 
-<h1>Create a Post</h1>
+<h1>Create Your Post</h1>
 
 <div id="createform" class="page-login-form box">
 <form th:action="@{'/posts/create'}" method="POST" role="form" class="login-form" th:object="${post}">
