Blog page -Making even more CSS changes.

--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -8,7 +8,7 @@
 <nav th:fragment="awesomeNav" class="navbar navbar-default">
 
         <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a>
-        <a href="/posts/create"><span class="glyphicon pencil"></span>Make A Post</a>
+        <a href="/posts/create"><span class="glyphicon glyphicon-pencil"></span>Make A Post</a>
         <a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Login</a>
 </nav>
 
