--- a/src/main/resources/static/css/maincss.css
+++ b/src/main/resources/static/css/maincss.css
@@ -45,3 +45,16 @@ h1{
     padding-left: 20%;
     padding-right: 20%;
 }
+
+footer{
+    padding-top:2%;
+    padding-bottom: 2%;
+    background-color: steelblue;
+    color: white;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.container{
+    padding-bottom: 1%;
+}
