--- a/src/main/resources/templates/posts/view.html
+++ b/src/main/resources/templates/posts/view.html
@@ -19,6 +19,6 @@
     <a th:href="@{'/posts/' + *{id} + '/edit'}" class="btn btn-info" type="submit">Edit</a>
         <a th:href="@{'/posts/' + *{id} + '/delete'}" class="btn btn-danger" type="submit">Delete</a>
     </div>
-
+<footer th:replace="partials/awesomeFoot :: awesomeFoot"></footer>
 </body>
 </html>
