Blog page -Added additional custom css

--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -9,7 +9,8 @@
 
         <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a>
         <a href="/posts/create"><span class="glyphicon glyphicon-pencil"></span>Make A Post</a>
-        <a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Login</a>
+        <a href="/posts/login"><span class="glyphicon glyphicon-log-in"></span>Login</a>
+        <a href="/posts/register"><span class="glyphicon glyphicon-user"></span>Register</a>
 </nav>
 
 </body>
