--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -20,7 +20,7 @@
         <textarea id="description" th:field="*{body}" class="form-control" placeholder="Type Here"></textarea>
         <p class="alert" th:if="${#fields.hasErrors('body')}" th:errors="*{body}"></p>
     </div>
-    <button type="submit" class="btn btn-info">Submit</button>
+    <button type="submit" class="btn btn-info"><span class="glyphicon glyphicon-ok-sign"></span>Submit</button>
     </form>
 
 </div>
