--- a/src/main/resources/templates/posts/delete.html
+++ b/src/main/resources/templates/posts/delete.html
@@ -8,7 +8,7 @@
 
 <h1>Are you sure you want to delete?</h1>
 
-<button type="submit" class="btn btn-danger">Delete</button>
+<button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-remove-sign"></span>Delete</button>
 
 </body>
 </html>
