--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -17,8 +17,8 @@
             <textarea id="description" th:field="*{body}" class="form-control" placeholder="Description"></textarea>
         </div>
 
-        <button type="submit" class="btn btn-info">Edit</button>
-        <a th:href="@{'/posts/' + *{id} + '/delete'}" class="btn btn-danger" type="submit">Delete</a>
+        <button type="submit" class="btn btn-info"><span class="glyphicon glyphicon-edit"></span>Edit</button>
+        <a th:href="@{'/posts/' + *{id} + '/delete'}" class="btn btn-danger" type="submit"><span class="glyphicon glyphicon-remove-sign"></span>Delete</a>
     </form>
 
 </div>
