--- a/src/main/resources/templates/posts/view.html
+++ b/src/main/resources/templates/posts/view.html
@@ -16,8 +16,8 @@
     <h4 th:text="*{body}"></h4>
     </div>
 
-    <a th:href="@{'/posts/' + *{id} + '/edit'}" class="btn btn-info" type="submit">Edit</a>
-        <a th:href="@{'/posts/' + *{id} + '/delete'}" class="btn btn-danger" type="submit">Delete</a>
+    <a th:href="@{'/posts/' + *{id} + '/edit'}" class="btn btn-info" type="submit"><span class="glyphicon glyphicon-edit"></span>Edit</a>
+        <a th:href="@{'/posts/' + *{id} + '/delete'}" class="btn btn-danger" type="submit"><span class="glyphicon glyphicon-remove-sign"></span>Delete</a>
     </div>
 <footer th:replace="partials/awesomeFoot :: awesomeFoot"></footer>
 </body>
