Blog page -Added additional custom css

--- a/src/main/resources/templates/partials/awesomeFoot.html
+++ b/src/main/resources/templates/partials/awesomeFoot.html
@@ -4,10 +4,9 @@
 </head>
 <body>
 
-
-
-<footer th:fragment="awesomeFoot">
+<footer class="fixed" th:fragment="awesomeFoot">
     Copyright Awesome Blog
 </footer>
+
 </body>
 </html>
