--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -25,6 +25,6 @@
 
 </div>
 
-<footer class="fixed-to-bottom"  th:replace="partials/awesomeFoot :: awesomeFoot"></footer>
+<footer th:replace="partials/awesomeFoot :: awesomeFoot"></footer>
 </body>
 </html>
