--- a/src/main/resources/templates/posts/login.html
+++ b/src/main/resources/templates/posts/login.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="partials/awesomeHeader :: awesomeHeader">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Login</title>
-    <link rel="stylesheet" href="../../static/css/maincss.css"/>
+    <meta charset="UTF-8" />
+    <title>Log In</title>
 </head>
 <body>
 <nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-            <div class="page-login-form box">
-                <h3>
-                    Please sign in
-                </h3>
-                <form action="/login" method="POST" role="form" class="login-form">
-                    <div class="form-group">
-                        <input type="text" id="username" class="form-control" th:field="username" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <input id="password" th:field="password" type="password" class="form-control" placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-common log-btn">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
+<h1>Log In</h1>
+<div th:if="${param.error}">
+    Invalid Username and Password.
+</div>
+<div th:if="${param.logout}">
+    You have been logged out.
 </div>
 
+<form th:action="@{/login}" method="post">
+    <label for="username">Username</label>
+    <input id="username" name="username" type="text" />
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password" />
+    <input type="submit" value="Log In" />
+</form>
 </body>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-
 </html>
