--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<nav th:fragment="awesomeNav" class="navbar navbar-default">
+<nav th:fragment="awesomeNav" class="navbar">
 
         <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a>
         <a href="/posts/create"><span class="glyphicon glyphicon-pencil"></span>Make A Post</a>
