--- a/src/main/resources/templates/partials/awesomeFoot.html
+++ b/src/main/resources/templates/partials/awesomeFoot.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<footer class="fixed" th:fragment="awesomeFoot">
+<footer th:fragment="awesomeFoot">
     Copyright Awesome Blog
 </footer>
 
