--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -5,12 +5,12 @@
 </head>
 <body>
 
-<nav th:fragment="awesomeNav" class="navbar">
+<nav th:fragment="awesomeNav" class="nav ">
 
-        <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a>
-        <a href="/posts/create"><span class="glyphicon glyphicon-pencil"></span>Make A Post</a>
-        <a href="/posts/login"><span class="glyphicon glyphicon-log-in"></span>Login</a>
-        <a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Register</a>
+       <span> <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a></span>
+        <span><a href="/posts/create"><span class="glyphicon glyphicon-pencil"></span>Make A Post</a></span>
+        <span><a href="/posts/login"><span class="glyphicon glyphicon-log-in"></span>Login</a></span>
+        <span><a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Register</a></span>
 </nav>
 
 </body>
