Blog page -Fixed AuthenticationController to host the login mappings and changed the css for the login form.

--- a/src/main/resources/templates/partials/awesomeNav.html
+++ b/src/main/resources/templates/partials/awesomeNav.html
@@ -9,8 +9,8 @@
 
        <span> <a href="/posts"><span class="glyphicon glyphicon-home "></span>Home</a></span>
         <span><a href="/posts/create"><span class="glyphicon glyphicon-pencil"></span>Make A Post</a></span>
-        <span><a href="/posts/login"><span class="glyphicon glyphicon-log-in"></span>Login</a></span>
-        <span><a href="/posts/login"><span class="glyphicon glyphicon-user"></span>Register</a></span>
+        <span><a href="/login"><span class="glyphicon glyphicon-log-in"></span>Login</a></span>
+        <span><a href="/register"><span class="glyphicon glyphicon-user"></span>Register</a></span>
 </nav>
 
 </body>
