--- a/src/main/resources/templates/posts/login.html
+++ b/src/main/resources/templates/posts/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="partials/awesomeHeader :: awesomeHeader">
     <meta charset="UTF-8" />
     <title>Log In</title>
@@ -8,23 +8,22 @@
 <nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 <h1>Log In</h1>
 <div th:if="${param.error}">
-    Invalid Username and Password.
+    <h1>Invalid Username and Password.</h1>
 </div>
 <div th:if="${param.logout}">
-    You have been logged out.
+    <h1>You have been logged out.</h1>
 </div>
-<div id="login-form">
-<form th:action="@{posts/login}" method="post" class="form-group">
-    <div>
-    <label for="username">Username</label>
-    <input id="username" name="username" type="text" />
+<div id="createform" class="page-login-form box">
+    <form th:action="@{'/posts/login'}" method="POST" role="form" class="login-form" th:object="${post}">
+        <div class="form-group">
+            <input type="text" id="username" class="form-control" placeholder="username" />
         </div>
-    <div>
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    </div>
-    <input type="submit" value="register" />
-</form>
-    </div>
+        <div class="form-group">
+            <input id="password" class="form-control" placeholder="password" />
+        </div>
+        <button type="submit" class="btn btn-info"><span class="glyphicon glyphicon-ok-sign"></span>Register</button>
+    </form>
+
+</div>
 </body>
 </html>
