--- a/src/main/resources/templates/posts/register.html
+++ b/src/main/resources/templates/posts/register.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:include="partials/awesomeHeader :: awesomeHeader">
     <meta charset="UTF-8" />
     <title>Sign Up</title>
 </head>
 <body>
+<nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
+<h1>Sign Up</h1>
 
-<h1>Log In</h1>
-<form th:action="@{user/register}" method="post">
-    <label for="username">Username</label>
-    <input id="username" name="username" type="text" />
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    <label for="email">Email</label>
-    <input id="email" name="password" type="email" />
-    <input type="submit" value="Register" />
-</form>
-
+<div id="createform" class="page-login-form box">
+    <form th:action="@{'/posts/register'}" method="POST" role="form" class="login-form">
+        <div class="form-group">
+            <input type="text" id="username" class="form-control" placeholder="username" />
+        </div>
+        <div class="form-group">
+            <input type="password" id="password" class="form-control" placeholder="password" />
+        </div>
+        <div class="form-group">
+            <input id="email"  class="form-control" placeholder="email"/>
+        </div>
+        <button type="submit" class="btn btn-info"><span class="glyphicon glyphicon-ok-sign"></span>Register</button>
+    </form>
+</div>
 </body>
 </html>
