Blog page -Changed the header to "Welcome To The Awesome Blog"

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,7 +9,7 @@
 
     <nav th:replace="partials/awesomeNav :: awesomeNav"></nav>
 
-<h1 class="page-header">Welcome To The Blog</h1>
+<h1 class="page-header">Welcome To The Awesome Blog</h1>
 
 <!--<div id="posts" th:each="post:${post}">
 
